// Original file: proto/hello.proto

import type { TodoRequest as _helloPackage_TodoRequest, TodoRequest__Output as _helloPackage_TodoRequest__Output } from '../helloPackage/TodoRequest';

export interface TodoResponse {
  'todos'?: (_helloPackage_TodoRequest)[];
}

export interface TodoResponse__Output {
  'todos'?: (_helloPackage_TodoRequest__Output)[];
}
